--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "counting game bot for discord",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./index.js"
   },
   "keywords": [
     "discordjs"
